--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
   <meta name="description" content="Резюме Всеволода html - программиста знающего html, css, php, python и js!">
 </head>
 <body>
+   <div class="loader">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+   </div>
+   <script>
+  document.body.onload = function() {
+  setTimeout(function() {
+    var preloader = document.getElementById('load');
+      preloader.remove();
+  }, 100);
+}
+   </script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
