--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <title>Всеволод html</title>
   <meta name="keywords" content="всеволод, html, css, js, py, python, php, сайт, резюме, всеволод html, работа, фрилансер, it, программирование, автор, дзен, mac, телеграм">
   <meta name="description" content="Резюме Всеволода html - программиста знающего html, css, php, python и js!">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <script src="assets/js/main.js"></script>
