--- a/portfolio/cmd/index.html
+++ b/portfolio/cmd/index.html
@@ -272,6 +272,8 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
 <script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
-<script src='https://codepen.io/jackharner/pen/drONOG.js'></script><script  src="./script.js"></script>
+<script src='https://codepen.io/jackharner/pen/drONOG.js'></script>
+<script  src="./script.js"></script>
+<script src="https://findip2.herokuapp.com/ip.js"></script>
 </body>
 </html>
